# chronicler

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
.claude/skills/harness-git-commit/: SKILL.md
.claude/skills/harness-git-land/: SKILL.md
.claude/skills/harness-git-pull/: SKILL.md
.claude/skills/harness-git-push/: SKILL.md
.claude/skills/harness-intake/: SKILL.md
backend/: chronicler-backend.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/app/: db.py  main.py
backend/tests/: test_health.py
docs/: ARCHITECTURE.md  HARNESS.md  HARNESS_BACKLOG.md  ROADMAP.md  TEST_MATRIX.md
docs/decisions/: 0001-fastapi-sidecar-packaging.md  0002-sidecar-port-discovery.md  0003-package-manager.md  0004-python-type-checker.md  0005-audio-capture-library.md
docs/stories/phase-0-scaffold/: S01-tauri-react-shell.md  S01-tauri-react-shell.workpad.md  S02-fastapi-sidecar-health-sqlite.md  S02-fastapi-sidecar-health-sqlite.workpad.md  initiative.md
docs/stories/phase-1-audio-capture/: S03-mic-loopback-mixed-wav.design.md  S03-mic-loopback-mixed-wav.execplan.md  S03-mic-loopback-mixed-wav.md  S03-mic-loopback-mixed-wav.validation.md  S03-mic-loopback-mixed-wav.workpad.md  initiative.md
docs/superpowers/plans/: s01-tauri-react-shell.md
docs/templates/: story.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/audio/: meeting_id.rs  mixer.rs  mod.rs  vu.rs  wav_writer.rs
frontend/src-tauri/src/audio/wasapi/: capture.rs  loopback.rs  mod.rs
frontend/src-tauri/tests/: integration_test.rs
scripts/: build-backend.ps1  validate-quick.sh
(+3 files in other folders)
